src/test/ui/const-generics/infer/cannot-infer-const-args.min.stderr
error[E0282]: type annotations needed
  --> $DIR/cannot-infer-const-args.rs:12:5
   |
LL |     foo();
   |     ^^^
   |
   = note: cannot infer the value of the const parameter `X`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
